--- a/discount.html
+++ b/discount.html
@@ -69,15 +69,19 @@ input:focus{
 <div class="container">
   <h1>Percentage Calculator</h1>
 
-  
-
   <div>
     <label>Amount:</label>
-<input type="text" list="wholenumber" placeholder="Select number">
-<datalist id="wholenumber"></datalist>
+    <input type="number" id="wholenumber">
+  </div>
+
+
+  <div>
+    <label>Percentage:</label>
+<input type="text" list="percentage" placeholder="Select number">
+<datalist id="percentage"></datalist>
 
 <script>
-const list = document.getElementById("wholenumber");
+const list = document.getElementById("percentage");
 
 for(let i = 5; i <= 100; i += 5){
   list.innerHTML += `<option value="${i}">`;
@@ -89,10 +93,6 @@ for(let i = 5; i <= 100; i += 5){
   
   </div>
 
-<div>
-    <label>Percentage:</label>
-    <input type="number" id="percentage">
-  </div>
 
 
   <div>
