--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <link href='https://fonts.googleapis.com/css?family=Comic Neue' rel='stylesheet'>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/iasaurav/javascript@main/table.css">
+
+
+
 
 <style>
+body {
+    font-family: 'Comic Neue';font-size: 22px;
+}
+
+  
 .round-img {
   width: 200px;
   height: 200px;
