--- a/upi.html
+++ b/upi.html
@@ -69,7 +69,8 @@ img {vertical-align:middle; border-radius:10px}
 // 🔥 Only edit images here
 const images = [
   "1FGNC6PlnIZ-GdkONIk2L-2CxoB4PyXHA",
-  "1RJZd4FUhxOoF7WZOkQZM5QUurdMLEwfx"
+  "1RJZd4FUhxOoF7WZOkQZM5QUurdMLEwfx",
+  "160zGeMRbHs5D8tlSJS9siVVytl1dMti_"
 ];
 
 const slider = document.getElementById("slider");
