--- a/ac.html
+++ b/ac.html
@@ -114,4 +114,10 @@ const [id, gid] = "16MN8hw-PW8D0XPW4qOA2CN6yf2cSjAh0eJnm6MRV4Zk:1897283431".trim
 </script>
 
 
+<a href='https://gpay.app.goo.gl/pay-T8wH7S8sEGh'><img src="https://lh3.googleusercontent.com/d/1DJiHCC3hlUt1JzGi1sRDXBqRc7hq0qxx" alt="Avatar" style="width:200px;border-radius:50%"></a>
+</br></br>
+  
+
+
+
 
